[project]
name = "th07-build"
version = "0.1.0"
description = "Build script for Touhou 7"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "icoextract>=0.2.0",
    "reccmp>=0.1.0",
    "requests>=2.33.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
reccmp = { git = "https://github.com/isledecomp/reccmp" }
